--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "pals",
+  "name": "@nk4dev/pals",
   "version": "0.1.0",
   "type": "module",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": "https://github.com/nk4dev/pals.git",
   "bin": {
     "pals": "./src/index.js"
   },
